--- a/server/plugins/parsers/paro_parser.py.dist
+++ b/server/plugins/parsers/paro_parser.py.dist
@@ -59,8 +59,8 @@ sys.path.append(dirname(dirname(dirname(dirname(realpath(__file__))))))
 from server.lib.openvdm_plugin import OpenVDMCSVParser
 from server.lib.openvdm import OpenVDM
 
-# RAW_COLS = ['date_time','hdr','depth','???'] # OpenRVDAS style
-RAW_COLS = ['date','time','hdr','depth','???'] # SCS style
+RAW_COLS = ['date_time','hdr','depth','???'] # OpenRVDAS style
+# RAW_COLS = ['date','time','hdr','depth','???'] # SCS style
 PROC_COLS = ['date_time','depth']
 
 ROUNDING = {
@@ -71,8 +71,8 @@ MIN_DEPTH = 0
 
 MAX_DELTA_T = pd.Timedelta('10 seconds')
 
-# DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
-DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
+DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
+# DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
 
 
 class ParoParser(OpenVDMCSVParser):
@@ -104,8 +104,8 @@ class ParoParser(OpenVDMCSVParser):
                 for lineno, line in enumerate(reader):
 
                     try:
-                        # date_time = line['date_time'] # OpenRVDAS style
-                        date_time = ' '.join([line['date'], line['time']]) # SCS style
+                        date_time = line['date_time'] # OpenRVDAS style
+                        # date_time = ' '.join([line['date'], line['time']]) # SCS style
 
                         depth = float(line['depth']) if line['depth'] != '' else None
 
