--- a/server/plugins/scs_plugin.py.dist
+++ b/server/plugins/scs_plugin.py.dist
@@ -1,9 +1,9 @@
 #!/usr/bin/env python3
 """
 
-FILE:  SCS_plugin.py
+FILE:  scs_plugin.py
 
-USAGE:  SCS_plugin.py [-h] [--dataType] <dataFile>
+USAGE:  scs_plugin.py [-h] [--dataType] <dataFile>
 
 DESCRIPTION:  This python script interprets raw files created by the SCS Data
     Acquision System.  Depending on the command-line arguments, the script
@@ -79,7 +79,7 @@ fileTypeFilters = [
 # -------------------------------------------------------------------------------------
 
 
-class SCS_OpenVDMPlugin(OpenVDMPlugin):
+class SCSPlugin(OpenVDMPlugin):
     """
     OpenVDM plugin for the SCS Underway data acquisition system
     """
@@ -154,7 +154,7 @@ if __name__ == "__main__":
         logging.warning("File is empty")
         sys.exit(0)
 
-    plugin = SCS_OpenVDMPlugin()
+    plugin = SCSPlugin()
 
     if parsed_args.dataType:
         dataType = plugin.get_data_type(parsed_args.dataFile)
