--- a/server/plugins/em302_plugin.py.dist
+++ b/server/plugins/em302_plugin.py.dist
@@ -1,8 +1,8 @@
 #!/usr/bin/env python3
 """
-FILE:  EM302_plugin.py
+FILE:  em302_plugin.py
 
-USAGE:  EM302_plugin.py [-h] [--dataType] <dataFile>
+USAGE:  em302_plugin.py [-h] [--dataType] <dataFile>
 
 DESCRIPTION:  This python script interprets raw files created by the SCS Data
     Acquision System.  Depending on the command-line arguments, the script
@@ -62,7 +62,7 @@ FILE_TYPE_FILTERS = [
 ]
 
 
-class EM302_OpenVDMPlugin(OpenVDMPlugin):
+class EM302Plugin(OpenVDMPlugin):
     """
     OpenVDM plugin for the EM302 MBES
     """
@@ -122,7 +122,7 @@ if __name__ == "__main__":
         logging.warning("File is empty")
         sys.exit(0)
 
-    plugin = EM302_OpenVDMPlugin()
+    plugin = EM302Plugin()
 
     if parsed_args.dataType:
         dataType = plugin.get_data_type(parsed_args.dataFile)
